--- a/src/rclone_commander/config/app_config.ini
+++ b/src/rclone_commander/config/app_config.ini
@@ -1,14 +1,16 @@
 [General]
-# Default remote to show in left panel (leave empty for first from rclone.conf)
+# Default remote to show in left panel (leave empty for local)
 default_left_remote =
-# Default remote to show in right panel
-default_right_remote = local
+# Default remote to show in right panel (leave empty for first from rclone.conf)
+default_right_remote =  hetenc
+# Default starting path for local remote (leave empty for home directory, use / for root)
+local_default_path =
 # Application title shown in header
-app_title = Rclone Commander
-# Enable debug logging to rclonecommander_debug.log
-debug = true
+app_title = rclone-commander
+# Enable debug logging to rclone_commander_debug.log
+debug = false
 # Extra rclone flags to add to all commands (space-separated, e.g., --progress --verbose)
-extra_rclone_flags =
+extra_rclone_flags = --transfers 6 --checkers 6
 
 [Display]
 # Color scheme: dark, light, or auto
@@ -44,7 +46,6 @@ progress_stats_interval = 1s
 
 [KeyBindings]
 # Customize key bindings (use standard key names)
-# Note: Ctrl+C/D/Z are often captured by terminals, so we use alternatives
 quit = q
 switch_panel = tab
 swap_panels = ctrl+u
