--- a/config/app_config.ini
+++ b/config/app_config.ini
@@ -2,7 +2,9 @@
 # Default remote to show in left panel (leave empty for local)
 default_left_remote =
 # Default remote to show in right panel (leave empty for first from rclone.conf)
-default_right_remote = 
+default_right_remote =  hetenc
+# Default starting path for local remote (leave empty for home directory, use / for root)
+local_default_path =
 # Application title shown in header
 app_title = rclone-commander
 # Enable debug logging to rclone_commander_debug.log
