--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,33 @@ __pycache__/
 *$py.class
 *.so
 .Python
+
+# Build artifacts
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Distribution / packaging
+.Python
 build/
 develop-eggs/
 dist/
@@ -19,7 +46,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Virtual environments
 venv/
