--- a/config/rclone-commander.ini
+++ b/config/rclone-commander.ini
@@ -2,7 +2,7 @@
 # Default remote to show in left panel (leave empty for local)
 default_left_remote =
 # Default remote to show in right panel (leave empty for first from rclone.conf)
-default_right_remote = 
+default_right_remote =  
 # Default starting path for local remote (leave empty for home directory, use / for root)
 local_default_path =
 # Application title shown in header
@@ -11,6 +11,8 @@ app_title = rclone-commander
 debug = false
 # Extra rclone flags to add to all commands (space-separated, e.g., --progress --verbose)
 extra_rclone_flags = --transfers 6 --checkers 6
+# Internal flag: whether user has been prompted about adding [local] remote (do not modify)
+local_remote_prompted = false
 
 [Display]
 # Color scheme: dark, light, or auto
